# recursant

./: .dockerignore  .env.sample  .gitignore  ARCHITECTURE.md  AUTHOR.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.mortgage.yaml  docker-compose.yaml  openclaw-design.md
mesh/: .dockerignore  .gitignore  Makefile  REQUIREMENTS.md  pyproject.toml
mesh/docker/: Dockerfile.agent  Dockerfile.gateway  Dockerfile.sidecar
mesh/docker/certs/: generate-certs.sh
mesh/docs/: IMPLEMENTATION_PLAN_PHASE_1.md  ISTIO_FEATURE_GAP.md  MORTGAGE_ORIGINATION_DEMO.md  VISUALISATION_TOOL.md
mesh/examples/: submit_demo_agents.py
mesh/examples/agent_a/: agent.py  agent_card.yaml  recursant-sidecar.yaml
mesh/examples/agent_b/: agent.py  agent_card.yaml  recursant-sidecar.yaml
mesh/proto/: config_sync.proto  config_sync_pb2.py  config_sync_pb2_grpc.py
mesh/runtime/client/: __init__.py  a2a_client.py  langgraph_node.py
mesh/runtime/common/: models.py
mesh/runtime/gateway/: __init__.py  __main__.py  app.py  config.py  router.py
mesh/runtime/sidecar/: __main__.py  agent_card.py  app.py  cert_rotation.py  client.py  config.py  grpc_client.py  guardrail_eval.py  kafka_producer.py  lifecycle.py  llm_client.py  load_balancer.py  registry_client.py  resilience.py  server.py  sse_client.py  telemetry.py  tools.py  weaviate_client.py
mesh/tests/: conftest.py
mesh/tests/fixtures/: agent-card-fact-checker.yaml  agent-card-minimal.yaml  invalid-sidecar-config.yaml  minimal-sidecar-config.yaml  valid-sidecar-config.yaml
mesh/tests/integration/: conftest.py  test_a2a_roundtrip.py  test_agent_isolation.py  test_complex_banking.py  test_governance_enforcement.py  test_guardrail_enforcement.py  test_guardrail_integration.py  test_guardrail_phase2_integration.py  test_k8s_features.py  test_llm_roundtrip.py  test_multi_cluster_ha.py  test_registry_lifecycle.py  test_tool_governance.py
mesh/tests/smoke/: test_smoke.py
mesh/tests/unit/: GOVERNANCE_TEST_PLAN.md  test_a2a_client.py  test_agent_card.py  test_audit_chain.py  test_certs.py  (+28 more)
sdk/: pyproject.toml
sdk/recursant/: __init__.py  agent.py  config.py  deploy.py  exceptions.py  trace.py
sdk/tests/: conftest.py  test_agent.py  test_cli.py  test_cli_integration.py  test_client.py  test_config.py  test_exceptions.py  test_guardrails_integration.py  test_mesh_integration.py  test_models.py  test_observability_integration.py  test_trace_flush.py  test_trace_integration.py  test_trace_unit.py
(+564 files in other folders)
