[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursant-mesh"
version = "0.1.0"
description = "Recursant Agentic Mesh — sidecar runtime for governed agent-to-agent communication"
requires-python = ">=3.11"
dependencies = [
    # A2A protocol
    "a2a-sdk[http-server]",

    # HTTP server
    "flask>=3.0",
    "uvicorn>=0.30",

    # HTTP client
    "httpx>=0.27",

    # Configuration
    "pydantic>=2.0",
    "pyyaml>=6.0",

    # Crypto / mTLS
    "cryptography>=42.0",

    # Logging
    "structlog>=24.0",

    # gRPC (control plane config sync)
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",

    # MCP client (SSE transport)
    "mcp>=1.0",

    # JWT
    "PyJWT>=2.8",

    # OpenTelemetry
    "opentelemetry-sdk>=1.22",
    "opentelemetry-exporter-otlp>=1.22",
    "opentelemetry-instrumentation-flask>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",

    # Prometheus
    "opentelemetry-exporter-prometheus>=0.43b0",
    "prometheus-client>=0.20",

    # Kafka (observability event streaming)
    "confluent-kafka>=2.6",
]

[project.optional-dependencies]
agents = [
    "langgraph>=0.2",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
]
presidio = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "llm: tests that call real LLM APIs (require API keys, slow)",
]
