[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recursant"
version = "0.1.0"
description = "Recursant Agent Registry SDK — typed client, CLI, and declarative config for agent lifecycle management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
recursant = "recursant.cli.main:app"

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a running registry service",
]

[tool.hatch.build.targets.wheel]
packages = ["recursant"]
